--- a/README
+++ b/README
@@ -5,7 +5,8 @@ The pattern for submissions is:
 	Year := Digit Digit;
 	Digit := "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" | "0";
 
-Examples for DocumentType are "Klausur", "Übung", "Lösung", "Skript", etc.
+Examples for DocumentType are: 
+	"Klausur", "Übung", "Lösung", "Skript", "Aufschriebe" etc.
 
 Examples:
 
